# evault

./: .gitignore  .pylintrc  Cargo.toml  Makefile  README.md  alembic.ini  compose.yml  deny.toml  pyproject.toml  requirements.txt  server
.github/workflows/: black.yml  js-ci.yml  pytest.yml  security-scan.yml  server-ci.yml  webui-ci.yml
alembic/: env.py
alembic/versions/: 172c186018a4_initial_schema.py  53e12406e426_initial_schema.py  5a1fada2e223_initial_schema.py  9da1d436c0d3_initial_schema.py  dbba5d52c8d9_.py
dockerfiles/: server.dev.Dockerfile  server.development.Dockerfile  webui.dev.Dockerfile  webui.development.Dockerfile
docs/: authentications.md
evault.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/: Cargo.toml  cache.py  config.py  database.py  main.py  types.py
server/crypto/: kdf.py
server/github/: client.py  oauth.py
server/handlers/: auth.py  dashboard.py  router.py  user.py
server/middlewares/: auth.py
server/migrations/: 20250625022516_init.sql
server/src/: app.rs  cache.rs  database.rs  errors.rs  github.rs  lib.rs  main.rs  secrets.rs  utils.rs
server/src/handlers/: auth.rs  auth_handlers.rs  dashboard_handlers.rs  mod.rs  repo_handlers.rs
server/src/middlewares/: auth.rs
shared/: types.py
src/cli/: __init__.py  main.py  repository.py
src/evault/: main.py
src/pkg/: types.py  utils.py
src/server/: auth_handlers.py  cache.py  config.py  crypto.py  database.py  httpreqs.py  main.py  models.py  oauth.py  storage.py  user_handlers.py  validators.py
src/server/crypto/: passwordhash.py
src/server/github/: client.py  oauth.py
src/server/handlers/: auth.py  dashboard.py  router.py  user.py
src/server/middlewares/: auth.py
tests/: conftest.py
tests/cli/: test_parser.py
tests/crypto/: test_kdf.py
tests/server/: test_user_session_marshalling.py  test_validators.py
webui/: .prettierrc.json  README.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
webui/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts
webui/src/components/common/: Breadcrumbs.tsx  LoaderWithText.tsx
webui/src/components/dashboard/: Navbar.tsx  RepositoryCard.tsx  RepositoryCardSkeleton.tsx  RepositoryList.tsx
webui/src/components/dashboard/repository/: NewVaultForm.tsx
webui/src/hooks/: auth.tsx  breadcrumbs.ts  loadingText.ts  repository.tsx
webui/src/lib/validator/: repository.ts  user.ts
webui/src/pages/: auth.tsx  dash.tsx
webui/src/routes/: __root.tsx  dashboard.tsx  index.tsx
webui/src/routes/auth/: github.tsx  index.tsx
webui/src/routes/dashboard/: index.tsx
webui/src/routes/dashboard/repository/: $repoID.tsx
webui/src/services/: auth.ts  common.ts  repository.ts
webui/src/store/: breadcrumbsStore.ts
webui/src/types/: API.d.ts  Breadcrumb.d.ts  HTTP.d.ts  Repository.d.ts  User.d.ts
webui/src/utils/: axios.ts  muiTheme.ts
webui/src/utils/zod/: gitHubParams.ts
