[project]
name = "evault"
version = "0.1.0"
description = "Shareable vault for environment variables"
authors = [{ name = "Hal Nguyen", email = "haln_01@proton.me" }]
requires-python = "==3.13"
dependencies = [
  "alembic==1.16.1",
  "annotated-types==0.7.0",
  "anyio==4.9.0",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==21.2.0",
  "astroid==3.3.10",
  "blake3==1.0.5",
  "certifi==2025.4.26",
  "cffi==1.17.1",
  "charset-normalizer==3.4.2",
  "click==8.2.1",
  "dacite==1.9.2",
  "dill==0.4.0",
  "dnspython==2.7.0",
  "email-validator==2.2.0",
  "fastapi==0.115.12",
  "fastapi-cli==0.0.7",
  "flatten-dict==0.4.2",
  "greenlet==3.2.3",
  "h11==0.16.0",
  "hiredis==3.2.1",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "idna==3.10",
  "iniconfig==2.1.0",
  "isort==6.0.1",
  "jinja2==3.1.6",
  "loguru==0.7.3",
  "mako==1.3.10",
  "markdown-it-py==3.0.0",
  "markupsafe==3.0.2",
  "marshmallow==3.26.1",
  "mccabe==0.7.0",
  "mdurl==0.1.2",
  "mypy-extensions==1.1.0",
  "packaging==25.0",
  "pathspec==0.12.1",
  "platformdirs==4.3.8",
  "pluggy==1.6.0",
  "psycopg2==2.9.10",
  "pycparser==2.22",
  "pycryptodome==3.23.0",
  "pycryptodome-test-vectors==1.0.22",
  "pydantic==2.11.5",
  "pydantic-core==2.33.2",
  "pygments==2.19.1",
  "python-dotenv==1.1.0",
  "python-multipart==0.0.20",
  "pyyaml==6.0.2",
  "redis==6.2.0",
  "requests==2.32.3",
  "rich==14.0.0",
  "rich-toolkit==0.14.7",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sqlalchemy==2.0.41",
  "starlette==0.46.2",
  "tomlkit==0.13.3",
  "typer==0.16.0",
  "typing-extensions==4.14.0",
  "typing-inspect==0.9.0",
  "typing-inspection==0.4.1",
  "urllib3==2.4.0",
  "uvicorn==0.34.3",
  "uvloop==0.21.0",
  "watchfiles==1.0.5",
  "websockets==15.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = ""

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
(
  ^/webui    # exclude a file named foo.py in the root of the project
  | .*_pb2.py  # exclude autogenerated Protocol Buffer files anywhere in the project
)
'''

[dependency-groups]
dev = ["pytest>=8.4.1"]
