[package]
name = "server"
license = "GPL-3.0"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.45.1", features = ["rt-multi-thread", "net", "macros"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "auth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0.98"
base64 = "0.22.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
url = "2.5.4"
secrecy = { version = "0.10.3", features = ["serde"] }
r2d2 = "0.8.10"
redis = { version = "0.32.2", features = ["r2d2", "tokio-comp"] }
redis-macros = { version = "0.5.5", features = ["default"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.20", features = ["default", "cookies", "json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
